--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -132,3 +132,18 @@
   text-align: center;
   padding: 20px;
 }
+
+.likes {
+  button {
+    background-color: #f0f0f0;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.replies {
+  margin-top: 10px;
+  .reply {
+    margin-bottom: 5px;
+  }
+}
