--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -196,6 +196,11 @@
           }
         }
       }
+
+      .loginPrompt {
+        font-style: italic;
+        color: #666;
+      }
     }
   }
 }
