--- a/backend/templates/account/signup.html
+++ b/backend/templates/account/signup.html
@@ -5,59 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<style>
-  .signup-form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 0 50px;
-    background-color: #f8f9fa;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  .signup-form h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  .signup-form label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  .signup-form input[type="text"],
-  .signup-form input[type="email"],
-  .signup-form input[type="password"] {
-    width: 100%;
-    padding: 12px;
-    /*margin-bottom: 10px;*/
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  .signup-form button[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .signup-form button[type="submit"]:hover {
-    background-color: #218838;
-  }
-  .signup-form .alert {
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-  }
-  .signup-form .alert-error {
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
-  }
-</style>
-
-<div class="signup-form">
+<div class="form-container">
   <h1>{% trans "Sign Up" %}</h1>
 
   <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
@@ -67,8 +15,8 @@
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
     <button type="submit">{% trans "Sign Up" %}</button>
-  <p>{% blocktrans %}У вас уже есть аккаунт? <a href="{{ login_url }}">Войти</a>.{% endblocktrans %}</p>
-
   </form>
+
+  <p>{% blocktrans %}У вас уже есть аккаунт? <a href="{{ login_url }}">Войти</a>.{% endblocktrans %}</p>
 </div>
 {% endblock %}
