--- a/backend/templates/account/password_reset_done.html
+++ b/backend/templates/account/password_reset_done.html
@@ -7,19 +7,23 @@
 
 {% block content %}
 <style>
-  .password-reset-done {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f8f9fa;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  .password-reset-done h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
+    .password-reset-done {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 30px;
+        background-color: #ffffff;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        text-align: center;
+    }
+    .password-reset-done h1 {
+        font-size: 24px;
+        margin-bottom: 20px;
+        color: var(--primary-color);
+    }
+    .password-reset-done p {
+        margin-bottom: 20px;
+    }
 </style>
 
 <div class="password-reset-done">
@@ -29,6 +33,8 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% blocktrans %}Мы отправили вам письмо на электронную почту. Если вы его не получили, пожалуйста, проверьте папку "Спам". В противном случае свяжитесь с нами, если письмо не придет в течение нескольких минут.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Мы отправили вам инструкции по установке нового пароля на указанный адрес электронной почты. Вы должны получить их в ближайшее время.{% endblocktrans %}</p>
+
+    <p>{% blocktrans %}Если вы не получили письмо, пожалуйста, убедитесь, что вы ввели адрес с которым Вы зарегистрировались, и проверьте папку со спамом.{% endblocktrans %}</p>
 </div>
 {% endblock %}
