--- a/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
@@ -28,27 +28,28 @@
     .gallery_card {
       margin-top: 42px;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr);
       gap: 24px;
 
       .galleryItem {
-          width: 100%;
-          height: auto;
-          aspect-ratio: 380 / 258;
+        position: relative;
+        width: 100%;
+        padding-top: 67.89%; // Соотношение сторон 380:258
+
         img {
-          cursor: pointer;
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
-          height: auto;
-          max-width: 380px;
-          max-height: 258px;
-          border-radius: 10px;
+          height: 100%;
           object-fit: cover;
-          aspect-ratio: 380 / 258;
+          border-radius: 10px;
+          cursor: pointer;
+          transition: transform 0.3s ease, box-shadow 0.3s ease;
 
           &:hover {
             transform: scale(1.01);
             box-shadow: 0 10px 16px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
           }
         }
       }
@@ -72,19 +73,11 @@
       cursor: pointer;
       border: none;
       text-align: center;
+      transition: transform 0.3s ease;
 
       &:hover {
         transform: scale(1.01);
-        transition: transform 0.3s ease;
       }
-    }
-  }
-}
-
-@media (max-width: 430px) {
-  .GalleryMainContent {
-    .gallery_card {
-      grid-template-columns: repeat(6, 1fr);
     }
   }
 }
@@ -92,14 +85,15 @@
 @media (max-width: 884px) {
   .GalleryMainContent {
     .gallery_card {
-        display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 16px;
+      grid-template-columns: repeat(2, 1fr);
     }
-      .galleryItem {
-      flex: 0 0 calc(50% - 8px);
-      max-width: 380px;
+  }
+}
+
+@media (max-width: 430px) {
+  .GalleryMainContent {
+    .gallery_card {
+      grid-template-columns: 1fr;
     }
   }
 }
